--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import '@angular/material/prebuilt-themes/purple-green.css';
+
 html,
 body {
     height: 100%;
@@ -6,3 +8,4 @@ body {
     margin: 0;
     font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
+
